--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "jest": "^24.5.0",
     "nodemon": "^1.18.7",
     "supertest": "^4.0.2"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
