--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dev-saas/api",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "GraphQL API",
   "main": "server.js",
   "scripts": {
@@ -22,6 +22,7 @@
     "graphql-tools": "^4.0.4",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.15",
+    "mqtt": "^2.18.8",
     "newrelic": "^5.6.4",
     "recaptcha2": "^1.3.3",
     "schemaglue": "^4.0.2",
