--- a/nodemon.json.example
+++ b/nodemon.json.example
@@ -1,4 +1,7 @@
 {
+    "ignore": [
+        "test/"
+    ],
     "ext": "js, graphql",
     "env": {
         "JWT_SECRET": "somesupersecretkey",
@@ -10,5 +13,6 @@
         "RECAPTCHA_SECRET_KEY": "6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe",
         "RECAPTCHA_SITE_KEY": "6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI",
         "CLOUDMQTT_URL": "mqtt://asdasdad:afsfsdfsdfs@m22.cloudmqtt.com:13920"
-    }
+    },
+    "exec": "npm run lint && node"
 }
