--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@dev-saas/api",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "GraphQL API",
   "main": "server.js",
   "scripts": {
     "test": "jest --runInBand",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "lint": "eslint ."
   },
   "author": "Rafael Santos",
   "license": "MIT",
@@ -30,6 +31,12 @@
   },
   "devDependencies": {
     "dotenv": "^7.0.0",
+    "eslint": "^5.16.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-standard": "^4.0.0",
     "jest": "^24.5.0",
     "nodemon": "^1.18.7",
     "supertest": "^4.0.2"
