--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,10 @@
 {
-  "useTabs": false,
-  "printWidth": 80,
-  "tabWidth": 2,
-  "singleQuote": true,
-  "trailingComma": "none",
-  "jsxBracketSameLine": true,
-  "semi": false,
-  "bracketSpacing": true,
-  "parser": "typescript"
+ "useTabs": false,
+ "printWidth": 73,
+ "tabWidth": 2,
+ "singleQuote": true,
+ "trailingComma": "none",
+ "jsxBracketSameLine": true,
+ "semi": false,
+ "bracketSpacing": true
 }
