--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dev-saas/api",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "description": "GraphQL API",
   "main": "server.js",
   "scripts": {
@@ -18,6 +18,7 @@
     "dataloader": "^1.4.0",
     "debug": "^4.1.1",
     "express": "^4.16.4",
+    "firebase-admin": "^8.3.0",
     "graphql": "^14.1.1",
     "graphql-redis-subscriptions": "^2.1.0",
     "graphql-tools": "^4.0.4",
