--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
   "scripts": {
     "test": "jest --runInBand",
     "start": "node server.js",
-    "dev": "nodemon server.js",
+    "dev": "nodemon --inspect server.js",
     "lint": "eslint ."
   },
   "author": "Rafael Santos",
   "license": "MIT",
   "dependencies": {
     "apollo-server-express": "2.4.8",
-    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "dataloader": "^1.4.0",
     "debug": "^4.1.1",
@@ -24,8 +23,6 @@
     "firebase-admin": "^8.3.0",
     "graphql": "^14.1.1",
     "graphql-redis-subscriptions": "^2.1.0",
-    "graphql-tools": "^4.0.4",
-    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.15",
     "mqtt": "^2.18.8",
     "newrelic": "^5.6.4",
