--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dev-saas/api",
-  "version": "1.3.0",
+  "version": "2.0.0",
   "description": "GraphQL API",
   "main": "server.js",
   "engines": {
@@ -17,13 +17,16 @@
   "dependencies": {
     "apollo-server-express": "2.4.8",
     "body-parser": "^1.18.3",
-    "dataloader": "^1.4.0",
     "debug": "^4.1.1",
     "express": "^4.16.4",
     "firebase-admin": "^8.3.0",
     "graphql": "^14.1.1",
     "graphql-redis-subscriptions": "^2.1.0",
+    "graphql-s2s": "^0.20.2",
+    "infotoprojection": "^1.0.0",
     "mongoose": "^5.3.15",
+    "mongoose-plugin-cursor-pagination": "^1.0.0",
+    "mongoose-plugin-dataloader": "^1.0.0",
     "mqtt": "^2.18.8",
     "newrelic": "^5.6.4",
     "recaptcha2": "^1.3.3",
