--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "infotoprojection": "^1.0.0",
     "mongoose": "^5.3.15",
     "mongoose-plugin-cursor-pagination": "^1.0.1",
-    "mongoose-plugin-dataloader": "^1.0.3",
+    "mongoose-plugin-dataloader": "1.0.2",
     "mqtt": "^2.18.8",
     "newrelic": "^5.6.4",
     "recaptcha2": "^1.3.3",
