--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
     "jest": "^24.5.0",
+    "jwt-decode": "^2.2.0",
     "nodemon": "^1.18.7",
     "supertest": "^4.0.2"
   },
