--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,6 +8,8 @@ sonar.organization=dev-saas
 
 sonar.sources=src
 
+sonar.exclusions=**/*-subscription.js
+
 sonar.host.url=https://sonarcloud.io
 
 sonar.login=$SONAR_TOKEN
