--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest --runInBand",
     "start": "node server.js",
     "dev": "nodemon --inspect server.js",
-    "lint": "eslint ."
+    "lint": "eslint src"
   },
   "author": "Rafael Santos",
   "license": "MIT",
