--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,16 @@ services:
 variables:
   MONGO_DATABASE: db_name
 
-Test:
+stages:
+  - build
+  - test
+  - deploy
+
+job 1:
+  stage: build
+
+job 2:
+  stage: test
   script:
    - yarn
    - yarn test
@@ -22,7 +31,7 @@ Production:
   image: ruby:latest
   only:
     - master
-  stage: deploy_production
+  stage: deploy
   script:
     - apt-get update -qy
     - apt-get install -y ruby-dev
