--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,21 +1,20 @@
-image: node:10.16.2
-
-cache:
-  paths:
-  - node_modules/
-  - .yarn
-
 stages:
   - build
   - test
   - deploy
 
 Build:
+  image: node:10.16.2
   stage: build
+  cache:
+    paths:
+      - node_modules/
+      - .yarn/
   script:
    - yarn
 
 Test:
+  image: node:10.16.2
   services:
     - mongo
     - redis
@@ -26,13 +25,16 @@ Test:
    - yarn test
 
 Lint:
+  image: node:10.16.2
   stage: test
   script:
    - yarn lint
 
-
 Deploy:
   image: ruby:latest
+  cache:
+    paths:
+      - vendor/ruby
   only:
     - master
   stage: deploy
