--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ Build:
   image: node:10.16.2
   stage: build
   cache:
+    key: build
     paths:
       - node_modules/
       - .yarn/
@@ -33,6 +34,7 @@ Lint:
 Deploy:
   image: ruby:latest
   cache:
+    key: deploy
     paths:
       - vendor/ruby
   only:
