--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,6 +54,6 @@ Deploy:
   script:
     # - apt-get update -qy
     # - apt-get -o dir::cache::archives="apt-cache" install -y ruby-dev
-    - bundle install dpl --path vendor
-    # - gem install --install-dir vendor dpl
+    # - gem install dpl
+    - bundle install -j $(nproc) --path vendor
     - dpl --provider=heroku --app=$HEROKU_APP_NAME --api-key=$HEROKU_API_KEY
