--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,4 +56,4 @@ Deploy:
     # - apt-get -o dir::cache::archives="apt-cache" install -y ruby-dev
     # - gem install dpl
     - bundle install -j $(nproc) --path vendor
-    - dpl --provider=heroku --app=$HEROKU_APP_NAME --api-key=$HEROKU_API_KEY
+    - ./vendor/dpl --provider=heroku --app=$HEROKU_APP_NAME --api-key=$HEROKU_API_KEY
