--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,7 +46,7 @@ Deploy:
   cache:
     key: deploy
     paths:
-      - vendor/
+      - vendor/ruby
       # - apt-cache/
   only:
     - master
@@ -56,4 +56,4 @@ Deploy:
     # - apt-get -o dir::cache::archives="apt-cache" install -y ruby-dev
     # - gem install dpl
     - bundle install -j $(nproc) --path vendor
-    - ./vendor/bundle/ruby/2.6.0/bin/dpl --provider=heroku --app=$HEROKU_APP_NAME --api-key=$HEROKU_API_KEY
+    - ./vendor/ruby/2.6.0/bin/dpl --provider=heroku --app=$HEROKU_APP_NAME --api-key=$HEROKU_API_KEY
