--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,8 +24,6 @@ Test:
     paths:
       - node_modules/
     policy: pull
-  variables:
-    MONGO_DATABASE: db_name
   stage: test
   script:
    - yarn test
@@ -46,14 +44,12 @@ Deploy:
   cache:
     key: deploy
     paths:
-      - vendor/ruby
-      # - apt-cache/
+      - apt-cache/
   only:
     - master
   stage: deploy
   script:
-    # - apt-get update -qy
-    # - apt-get -o dir::cache::archives="apt-cache" install -y ruby-dev
-    # - gem install dpl
-    - bundle install -j $(nproc) --path vendor
-    - ./vendor/ruby/2.6.0/bin/dpl --provider=heroku --app=$HEROKU_APP_NAME --api-key=$HEROKU_API_KEY
+    - apt-get update -qy
+    - apt-get -o dir::cache::archives="apt-cache" install -y ruby-dev
+    - gem install dpl
+    - dpl --provider=heroku --app=$HEROKU_APP_NAME --api-key=$HEROKU_API_KEY
